--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,7 @@ spring:
     basename: i18n/message
     encoding: UTF-8
     cache-duration: PT1H
-  security:
-    user:
-      name: user
-      password: 1234
-      roles: USER
+
   h2:
     console:
       enabled: true
@@ -29,7 +25,7 @@ spring:
   sql:
     init:
       platform: h2
-      schema-locations: classpath:sql/schema_new.sql
+      schema-locations: classpath:sql/schema_new.sql, classpath:org/springframework/security/oauth2/client/oauth2-client-schema.sql
       data-locations: classpath:sql/data_new.sql
       encoding: utf-8
 
@@ -42,6 +38,24 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-name: kakao
+            client-id: 831f4c447a8082b5ac0059e141ab00d3
+            client-secret: QDI7uM1T9fSJGCAjFmwFIcAkgWkztfJw
+            scope: profile_nickname, profile_image
+            redirect-uri: "http://localhost:8080/login/oauth2/code/{registrationId}"
+            authorization-grant-type: authorization_code
+            client-authentication-method: client_secret_post
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
 jwt:
   header: token
   issuer: prgrms
